--- a/index.html
+++ b/index.html
@@ -2,11 +2,136 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: {{projectTitle}}</title>
+    <title>Седона</title>
   </head>
   <body>
+    <header class="main-header">
+      <img class="main-logo" src="#" alt="Логотип Седона">
+      <nav class="navigation">
+        <ul class="navigation-list">
+        <li class="navigation-item">
+          <a class="navigation-link" href="#">Главная</a>
+        </li>
+        <li class="navigation-item">
+          <a class="navigation-link" href="#">О седоне</a>
+        </li>
+        <li class="navigation-item">
+          <a class="navigation-link" href="#">Гостиницы</a>
+        </li>
+      </ul>
+      <ul class="navigation-list navigation-user">
+        <li class="navigation-item">
+          <a class="navigation-link" href="#">
+            <span class="visually-hidden">Поиск</span>
+          </a>
+        </li>
+        <li class="navigation-item">
+          <a class="navigation-link" href="#">
+            <span class="visually-hidden">Корзина(избранное)</span>
+          </a>
+        </li>
+        <li class="navigation-item">
+          <a class="navigation-link" href="#">Хочу сюда!</a>
+        </li>
+      </ul>
+      </nav>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
+    </header>
 
+    <main class="main-index">
+      <section class="slogan">
+        <h1 class="visually-hidden">Добро пожаловать в Седону</h1>
+        <img src="#" alt="Добро пожаловать в великолепие Седоны 'потому что Гранд-каньон отстой'">
+      </section>
+
+      <section class="advantages">
+        <h2 class="section-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
+        <p>Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
+        <div class="advantages-town">
+          <h3 class="advantages-title">Настоящий городок</h3>
+          <p class="advantages-discription">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+          <img src="#" alt="На изображении показано здание с деревянным балконом и вывеской «OPEN RANGE GRILL & TAVERN». На балконе развеваются американские флаги. На переднем плане — зелёные и ярко-розовые цветы, а также растения, частично размытые.">
+        </div>
+        <div class="advantages-square">
+          <h3 class="advantages-title">Небольшая площадь</h3>
+          <p class="advantages-discription">Все достопримечательности находятся очень близко</p>
+        </div>
+        <div class="advantages-road">
+          <h3 class="advantages-title">Красивая дорога</h3>
+          <p class="advantages-discription">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+        </div>
+        <div class="advantages-turist">
+          <h3 class="advantages-title">Мало туристов</h3>
+          <p class="advantages-discription">Большинство едет в Гранд Каньон и толпится там</p>
+        </div>
+        <div class="advantages-bridge">
+          <img src="#" alt="туристическая достопримечательность на заднем плане
+          Каньон: Седона, тропа моста Дьявола
+          На изображении показан природный пейзаж с характерными красными скалами и арками, типичными для региона Седона в Аризоне, США. На переднем плане видна массивная каменная арка, под которой растут зелёные деревья.">
+          <h3 class="advantages-title">Там есть мост дьявола</h3>
+          <p class="advantages-discription">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+        </div>
+      </section>
+
+      <section class="rest">
+        <h2 class="section-title">Приезжайте в Седону отдохнуть в комфорте и уюте!</h2>
+        <p>Опытный персонал и качественное обслуживание!</p>
+        <div class="rest-housing">
+          <h3 class="rest-title">Жильё</h3>
+          <p class="rest-discription">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+        </div>
+        <div class="rest-food">
+          <h3 class="rest-title">Еда</h3>
+          <p class="rest-discription">Всегда заказывайте
+          топовый фирменный бургер, вы не разочаруетесь!</p>
+        </div>
+        <div class="rest-souvenir">
+          <h3 class="rest-title">Сувениры</h3>
+          <p class="rest-discription">Не только китайского,
+          но и настоящего местного производства!</p>
+        </div>
+      </section>
+
+      <section class="interest">
+        <h2 class="section-title">Заинтересовались?</h2>
+        <p>Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+        <a class="interest-link" href="#">ПОИСК ГОСТИНИЦЫ В седоне</a>
+      </section>
+
+      <section class="mailing">
+        <h2 class="section-title">Подпишитесь на рассылку</h2>
+        <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
+        <form class="mailing-form" action="https://echo.htmlacademy.ru/" method="get">
+          <input class="mailing-input" type="text" name="mailing" placeholder="Ваш e-mail">
+          <button class="button" type="submit">Подписаться</button>
+        </form>
+      </section>
+
+
+    </main>
+
+    <footer class="main-footer">
+      <ul class="footer-social-list">
+        <li class="footer-social-item">
+          <a class="button" href="#">
+            <span class="visually-hidden">Vk</span>
+          </a>
+        </li>
+        <li class="footer-social-item">
+          <a class="button" href="#">
+            <span class="visually-hidden">Telegram</span>
+          </a>
+        </li>
+        <li class="footer-social-item">
+          <a class="button" href="#">
+            <span class="visually-hidden">YouTube</span>
+          </a>
+        </li>
+      </ul>
+      <a class="footer-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
+      <a href="https://htmlacademy.ru/intensive/htmlcss">
+        <img src="#" alt="Логотип html academy">
+      </a>
+    </footer>
   </body>
 </html>
