--- a/catalog.html
+++ b/catalog.html
@@ -6,17 +6,19 @@
   </head>
   <body>
     <header class="main-header">
-      <img class="main-logo" src="#" alt="Логотип Седона" />
+      <a href="index.html">
+        <img class="main-logo" src="#" alt="Логотип Седона" />
+      </a>
       <nav class="navigation">
         <ul class="navigation-list">
           <li class="navigation-item">
-            <a class="navigation-link" href="#">Главная</a>
+            <a class="navigation-link" href="index.html">Главная</a>
           </li>
           <li class="navigation-item">
             <a class="navigation-link" href="#">О седоне</a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link" href="#">Гостиницы</a>
+            <a class="navigation-link navigation-link-current" href="#">Гостиницы</a>
           </li>
         </ul>
         <ul class="navigation-list navigation-user">
@@ -36,6 +38,174 @@
         </ul>
       </nav>
     </header>
+
+    <main class="main-inner">
+      <section class="hotel">
+        <h1 class="hotel-title">Гостиницы Седоны</h1>
+        <ul class="breadcrumbs">
+          <li class="breadcrumbs-item">
+            <a class="breadcrumbs-link" href="index.html">Главная</a>
+          </li>
+          <li class="breadcrumbs-item">
+            <a class="breadcrumbs-link" href="#">Гостиницы</a>
+          </li>
+        </ul>
+        <form class="catalog-filter" action="https://echo.htmlacademy.ru/" method="get">
+          <fieldset class="catalog-filter-group">
+            <legend class="catalog-filter-title">Инфраструктура:</legend>
+            <label class="control">
+              <input class="control-item" type="checkbox" name="pool" checked>
+              Бассейн
+            </label>
+            <label class="control">
+              <input class="control-item" type="checkbox" name="parking" checked>
+              Парковка
+            </label>
+            <label class="control">
+              <input class="control-item" type="checkbox" name="wifi">
+              Wi-Fi
+            </label>
+          </fieldset>
+          <fieldset class="catalog-filter-group">
+            <legend class="catalog-filter-title">Тип жилья:</legend>
+            <label class="control">
+              <input class="control-item" type="radio" name="hotel" checked>
+              Гостиница
+            </label>
+            <label class="control">
+              <input class="control-item" type="radio" name="motel">
+              Мотель
+            </label>
+            <label class="control">
+              <input class="control-item" type="radio" name="apartment">
+              Апартаменты
+            </label>
+          </fieldset>
+          <fieldset class="catalog-filter-group">
+            <legend class="catalog-filter-title">Стоимость, ₽:</legend>
+          </fieldset>
+          <button class="button" type="submit">Применить</button>
+          <button type="button">Сбросить</button>
+        </form>
+      </section>
+      
+      <section class="hotel-cart">
+        <h2 class="hotel-cart-title">Найдено гостиниц: 38</h2>
+        <select class="select-control" name="" id="">
+          <option value="cheap">Сначала дешёвые</option>
+          <option value="expensive">Сначала дорогие</option>
+          <option value="popular">Сначала популярные</option>
+        </select>
+      <a class="button" href="#">
+        <span class="visually-hidden">показать карточки</span>
+      </a>
+      <a class="button button-light" href="#">
+        <span class="visually-hidden">показать 1 карточку</span>
+      </a>
+      <a class="button" href="#">
+        <span class="visually-hidden">показать список</span>
+      </a>
+      <div class="product-card">
+        <a class="product-card-link" href="#">
+          <img class="product-card-img" src="#" alt="">
+          <h3 class="product-card-title">Amara Resort & Spa</h3>
+        </a>
+        <p>
+          <span>Гостиница</span>
+          <span>От 4000 ₽</span>
+        </p>
+        <a class="button" href="#">подробнее</a>
+        <button class="button" type="button">в избранное</button>
+        <div class="rating">
+          <span class="rating-star"></span>
+          <span class="rating-star"></span>
+          <span class="rating-star"></span>
+          <span class="rating-star"></span>
+          <p class="rating-result">Рейтинг: 8,5</p>
+        </div>
+      </div>
+      <div class="product-card">
+        <a class="product-card-link" href="#">
+          <img class="product-card-img" src="#" alt="">
+          <h3 class="product-card-title">Villas at Poco Diablo</h3>
+        </a>
+        <p>
+          <span>Гостиница</span>
+          <span>От 5000 ₽</span>
+        </p>
+        <a class="button" href="#">подробнее</a>
+        <button class="button" type="button">в избранное</button>
+        <div class="rating">
+          <span class="rating-star"></span>
+          <span class="rating-star"></span>
+          <span class="rating-star"></span>
+          <span class="rating-star"></span>
+          <p class="rating-result">Рейтинг: 9,2</p>
+        </div>
+      </div>
+      <div class="product-card">
+        <a class="product-card-link" href="#">
+          <img class="product-card-img" src="#" alt="">
+          <h3 class="product-card-title">Desert Quail Inn</h3>
+        </a>
+        <p>
+          <span>Гостиница</span>
+          <span>От 2500 ₽</span>
+        </p>
+        <a class="button" href="#">подробнее</a>
+        <button class="button" type="button">в избранное</button>
+        <div class="rating">
+          <span class="rating-star"></span>
+          <span class="rating-star"></span>
+          <span class="rating-star"></span>
+          <span class="rating-star"></span>
+          <p class="rating-result">Рейтинг: 6,9</p>
+        </div>
+      </div>
+      <div class="product-card">
+        <a class="product-card-link" href="#">
+          <img class="product-card-img" src="#" alt="">
+          <h3 class="product-card-title">GreenTree Inn</h3>
+        </a>
+        <p>
+          <span>Гостиница</span>
+          <span>От 1500 ₽</span>
+        </p>
+        <a class="button" href="#">подробнее</a>
+        <button class="button" type="button">в избранное</button>
+        <div class="rating">
+          <span class="rating-star"></span>
+          <span class="rating-star"></span>
+          <span class="rating-star"></span>
+          <span class="rating-star"></span>
+          <p class="rating-result">Рейтинг: 5,0</p>
+        </div>
+      </div>
+      <ul class="pagination">
+        <li class="pagination-list">
+          <a class="pagination-item" href="#">1</a>
+        </li>
+        <li class="pagination-list">
+          <a class="pagination-item" href="#">2</a>
+        </li>
+        <li class="pagination-list">
+          <a class="pagination-item" href="#">3</a>
+        </li>
+        <li class="pagination-list">
+          <a class="pagination-item" href="#">4</a>
+        </li>
+      </ul>
+    </section>
+
+    <section class="mailing">
+      <h2 class="section-title">Подпишитесь на рассылку</h2>
+      <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
+      <form class="mailing-form" action="https://echo.htmlacademy.ru/" method="get">
+        <input class="mailing-input" type="text" name="mailing" placeholder="Ваш e-mail">
+        <button class="button" type="submit">Подписаться</button>
+      </form>
+    </section>
+    </main>
 
     <footer class="main-footer">
       <ul class="footer-social-list">
