--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <header class="main-header">
-      <img class="main-logo" src="#" alt="Логотип Седона">
+      <img class="main-logo" src="index.html" alt="Логотип Седона">
       <nav class="navigation">
         <ul class="navigation-list">
         <li class="navigation-item">
