--- a/catalog.html
+++ b/catalog.html
@@ -18,7 +18,9 @@
             <a class="navigation-link" href="#">О седоне</a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link navigation-link-current" href="#">Гостиницы</a>
+            <a class="navigation-link navigation-link-current" href="#"
+              >Гостиницы</a
+            >
           </li>
         </ul>
         <ul class="navigation-list navigation-user">
@@ -50,45 +52,75 @@
             <a class="breadcrumbs-link" href="#">Гостиницы</a>
           </li>
         </ul>
-        <form class="catalog-filter" action="https://echo.htmlacademy.ru/" method="get">
+        <form
+          class="catalog-filter"
+          action="https://echo.htmlacademy.ru/"
+          method="get"
+        >
           <fieldset class="catalog-filter-group">
             <legend class="catalog-filter-title">Инфраструктура:</legend>
-            <label class="control">
-              <input class="control-item" type="checkbox" name="pool" checked>
-              Бассейн
-            </label>
-            <label class="control">
-              <input class="control-item" type="checkbox" name="parking" checked>
-              Парковка
-            </label>
-            <label class="control">
-              <input class="control-item" type="checkbox" name="wifi">
-              Wi-Fi
-            </label>
+            <ul class="catalog-filter-list">
+              <li class="catalog-filter-item">
+                <label class="control">
+                  <input
+                    class="control-item"
+                    type="checkbox"
+                    name="pool"
+                    checked
+                  />
+                  Бассейн
+                </label>
+              </li>
+              <li class="catalog-filter-item">
+                <label class="control">
+                  <input
+                    class="control-item"
+                    type="checkbox"
+                    name="parking"
+                    checked
+                  />
+                  Парковка
+                </label>
+              </li>
+              <li class="catalog-filter-item">
+                <label class="control">
+                  <input class="control-item" type="checkbox" name="wifi" />
+                  Wi-Fi
+                </label>
+              </li>
+            </ul>
           </fieldset>
           <fieldset class="catalog-filter-group">
             <legend class="catalog-filter-title">Тип жилья:</legend>
-            <label class="control">
-              <input class="control-item" type="radio" name="hotel" checked>
+            <ul class="catalog-filter-list">
+              <li class="catalog-filter-item">
+<label class="control">
+              <input class="control-item" type="radio" name="hotel-group" value="hotel" checked />
               Гостиница
             </label>
-            <label class="control">
-              <input class="control-item" type="radio" name="motel">
+              </li>
+              <li class="catalog-filter-item">
+<label class="control">
+              <input class="control-item" type="radio" name="hotel-group" value="motel" />
               Мотель
             </label>
-            <label class="control">
-              <input class="control-item" type="radio" name="apartment">
+              </li>
+              <li class="catalog-filter-item">
+<label class="control">
+              <input class="control-item" type="radio" name="hotel-group" value="apartment" />
               Апартаменты
             </label>
+              </li>
+            </ul>
           </fieldset>
           <fieldset class="catalog-filter-group">
             <legend class="catalog-filter-title">Стоимость, ₽:</legend>
           </fieldset>
           <button class="button" type="submit">Применить</button>
-          <button type="button">Сбросить</button>
+          <button class="button-reset" type="reset">Сбросить</button>
         </form>
       </section>
-      
+
       <section class="hotel-cart">
         <h2 class="hotel-cart-title">Найдено гостиниц: 38</h2>
         <select class="select-control" name="" id="">
@@ -96,115 +128,136 @@
           <option value="expensive">Сначала дорогие</option>
           <option value="popular">Сначала популярные</option>
         </select>
-      <a class="button" href="#">
-        <span class="visually-hidden">показать карточки</span>
-      </a>
-      <a class="button button-light" href="#">
-        <span class="visually-hidden">показать 1 карточку</span>
-      </a>
-      <a class="button" href="#">
-        <span class="visually-hidden">показать список</span>
-      </a>
-      <div class="product-card">
-        <a class="product-card-link" href="#">
-          <img class="product-card-img" src="#" alt="">
-          <h3 class="product-card-title">Amara Resort & Spa</h3>
+        <div class="sort-list">
+          <a class="sort sort-curent" href="catalog.html?view=tile">
+          <span class="visually-hidden">показать карточки</span>
         </a>
-        <p>
-          <span>Гостиница</span>
-          <span>От 4000 ₽</span>
-        </p>
-        <a class="button" href="#">подробнее</a>
-        <button class="button" type="button">в избранное</button>
-        <div class="rating">
-          <span class="rating-star"></span>
-          <span class="rating-star"></span>
-          <span class="rating-star"></span>
-          <span class="rating-star"></span>
-          <p class="rating-result">Рейтинг: 8,5</p>
-        </div>
-      </div>
-      <div class="product-card">
-        <a class="product-card-link" href="#">
-          <img class="product-card-img" src="#" alt="">
-          <h3 class="product-card-title">Villas at Poco Diablo</h3>
+        <a class="sort " href="catalog.html?view=card">
+          <span class="visually-hidden">показать слайды</span>
         </a>
-        <p>
-          <span>Гостиница</span>
-          <span>От 5000 ₽</span>
-        </p>
-        <a class="button" href="#">подробнее</a>
-        <button class="button" type="button">в избранное</button>
-        <div class="rating">
-          <span class="rating-star"></span>
-          <span class="rating-star"></span>
-          <span class="rating-star"></span>
-          <span class="rating-star"></span>
-          <p class="rating-result">Рейтинг: 9,2</p>
-        </div>
-      </div>
-      <div class="product-card">
-        <a class="product-card-link" href="#">
-          <img class="product-card-img" src="#" alt="">
-          <h3 class="product-card-title">Desert Quail Inn</h3>
+        <a class="sort" href="catalog.html?view=list">
+          <span class="visually-hidden">показать список</span>
         </a>
-        <p>
-          <span>Гостиница</span>
-          <span>От 2500 ₽</span>
-        </p>
-        <a class="button" href="#">подробнее</a>
-        <button class="button" type="button">в избранное</button>
-        <div class="rating">
-          <span class="rating-star"></span>
-          <span class="rating-star"></span>
-          <span class="rating-star"></span>
-          <span class="rating-star"></span>
-          <p class="rating-result">Рейтинг: 6,9</p>
         </div>
-      </div>
-      <div class="product-card">
-        <a class="product-card-link" href="#">
-          <img class="product-card-img" src="#" alt="">
-          <h3 class="product-card-title">GreenTree Inn</h3>
-        </a>
-        <p>
-          <span>Гостиница</span>
-          <span>От 1500 ₽</span>
-        </p>
-        <a class="button" href="#">подробнее</a>
-        <button class="button" type="button">в избранное</button>
-        <div class="rating">
-          <span class="rating-star"></span>
-          <span class="rating-star"></span>
-          <span class="rating-star"></span>
-          <span class="rating-star"></span>
-          <p class="rating-result">Рейтинг: 5,0</p>
-        </div>
-      </div>
-      <ul class="pagination">
-        <li class="pagination-list">
-          <a class="pagination-item" href="#">1</a>
-        </li>
-        <li class="pagination-list">
-          <a class="pagination-item" href="#">2</a>
-        </li>
-        <li class="pagination-list">
-          <a class="pagination-item" href="#">3</a>
-        </li>
-        <li class="pagination-list">
-          <a class="pagination-item" href="#">4</a>
-        </li>
-      </ul>
-    </section>
 
-    <section class="mailing">
-      <h2 class="section-title">Подпишитесь на рассылку</h2>
-      <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
-      <form class="mailing-form" action="https://echo.htmlacademy.ru/" method="get">
-        <input class="mailing-input" type="text" name="mailing" placeholder="Ваш e-mail">
-        <button class="button" type="submit">Подписаться</button>
-      </form>
-    </section>
+        <div class="product-card">
+          <a class="product-card-link" href="#">
+            <img class="product-card-img" src="#" alt="Изображение показывает вид из темной пещеры на ночное небо, усеянное звездами. Скалы пещеры имеют красновато-коричневый оттенок, а небо за их пределами - глубокий синий цвет с множеством ярких точек, представляющих звезды. Свет попадает в пещеру, освещая пол и часть скал.
+            " />
+            <h3 class="product-card-title">Amara Resort & Spa</h3>
+          </a>
+          <p>
+            <span>Гостиница</span>
+            <span>От 4000 ₽</span>
+          </p>
+          <a class="show-more" href="#">подробнее</a>
+          <button class="button" type="button">в избранное</button>
+          <div class="rating">
+            <span class="rating-star"></span>
+            <span class="rating-star"></span>
+            <span class="rating-star"></span>
+            <span class="rating-star"></span>
+            <p class="rating-result">Рейтинг: 8,5</p>
+          </div>
+        </div>
+        <div class="product-card">
+          <a class="product-card-link" href="#">
+            <img class="product-card-img" src="#" alt="Изображение демонстрирует впечатляющий природный пейзаж в Седоне, Сюрприз. Главный объект фото - скалистые горы оранжево-красного цвета. Скалы имеют сложную, неровную форму и шероховатую текстуру поверхности. Перед горой находится полоска зелёных кустарников и деревьев. В небе доминируют тёмные облака, но среди них просвечивает мягкий рассеянный свет. На изображении нет людей или искусственных объектов, всё внимание сосредоточено на природе. Пейзаж передаёт ощущения спокойствия и мощи природы, внушая уважение к окружающему миру. Красочные горы, угрюмое небо и нежная радуга создают сложную композицию, где каждая деталь играет свою роль в гармонии." />
+            <h3 class="product-card-title">Villas at Poco Diablo</h3>
+          </a>
+          <p>
+            <span>Гостиница</span>
+            <span>От 5000 ₽</span>
+          </p>
+          <a class="show-more" href="#">подробнее</a>
+          <button class="button" type="button">в избранное</button>
+          <div class="rating">
+            <span class="rating-star"></span>
+            <span class="rating-star"></span>
+            <span class="rating-star"></span>
+            <span class="rating-star"></span>
+            <p class="rating-result">Рейтинг: 9,2</p>
+          </div>
+        </div>
+        <div class="product-card">
+          <a class="product-card-link" href="#">
+            <img class="product-card-img" src="#" alt=" Фотография изображает впечатляющий пейзаж юго-запада США, предположительно в районе Седоны, штат Аризона. Главный объект - массивная скалистая гора из красного песчаника. Гора имеет монолитную структуру с горизонтальными и вертикальными слоями. Цветовая гамма скалы варьируется от красного до тёмно-оранжевого с мягкими тенями. Верхняя часть скалы освещена тёплым жёлто-оранжевым светом вечернего солнца. Небо окрашено ярко-оранжевыми и розовыми тонами облаков. На переднем плане густая растительность насыщенного зелёного цвета. В левом нижнем углу видна беседка или постройка для отдыха, выполненная в светлых тонах. Фотография снята на закате, когда дневной свет создает насыщенные контрасты между тенью и жаром вечерних лучей." />
+            <h3 class="product-card-title">Desert Quail Inn</h3>
+          </a>
+          <p>
+            <span>Гостиница</span>
+            <span>От 2500 ₽</span>
+          </p>
+          <a class="show-more" href="#">подробнее</a>
+          <button class="button" type="button">в избранное</button>
+          <div class="rating">
+            <span class="rating-star"></span>
+            <span class="rating-star"></span>
+            <span class="rating-star"></span>
+            <span class="rating-star"></span>
+            <p class="rating-result">Рейтинг: 6,9</p>
+          </div>
+        </div>
+        <div class="product-card">
+          <a class="product-card-link" href="#">
+            <img class="product-card-img" src="#" alt="• Изображение представляет ночной пейзаж с крупной скалистой горой в центре. Гора имеет выраженную текстуру и горизонтальные слои камня. Цвета горы варьируются от терракотового и красноватого до оранжевых и коричневых тонов. Гора хорошо освещена снизу, создавая золотистое свечение и выделяя текстуры камня. Линия горизонта нечётко различима из-за тени и темноты. Верхнее изображение занято ночным небом, полным звёзд. Звёзды разбросаны повсюду, создавая ощущение бескрайности космоса. Небо кажется чистым и спокойным, без облаков и посторонних объектов. Пейзаж статичен, без признаков движения или человеческой деятельности. Текстура скал шероховатая и массивная, подчёркивая их возраст и устойчивость. Отсутствие зданий и искусственных конструкций добавляет аутентичности сцене. Настроение изображения - умиротворение, восхищение перед красотой природы. Мягкое освещение скалы на фоне звёздного неба создаёт атмосферу загадочности и медитативности." />
+            <h3 class="product-card-title">GreenTree Inn</h3>
+          </a>
+          <p>
+            <span>Гостиница</span>
+            <span>От 1500 ₽</span>
+          </p>
+          <a class="show-more" href="#">подробнее</a>
+          <button class="button" type="button">в избранное</button>
+          <div class="rating">
+            <span class="rating-star"></span>
+            <span class="rating-star"></span>
+            <span class="rating-star"></span>
+            <span class="rating-star"></span>
+            <p class="rating-result">Рейтинг: 5,0</p>
+          </div>
+        </div>
+        <ul class="pagination">
+          <li class="pagination-list">
+            <a class="pagination-item" href="#">1</a>
+          </li>
+          <li class="pagination-list">
+            <a class="pagination-item" href="#">2</a>
+          </li>
+          <li class="pagination-list">
+            <a class="pagination-item" href="#">3</a>
+          </li>
+          <li class="pagination-list">
+            <a class="pagination-item" href="#">4</a>
+          </li>
+          <li class="pagination-list">
+            <span class="pagination-item">...</span>
+          </li>
+          <li class="pagination-list">
+            <a class="pagination-item" href="#">10</a>
+          </li>
+        </ul>
+      </section>
+
+      <section class="mailing">
+        <h2 class="section-title">Подпишитесь на рассылку</h2>
+        <p>
+          Только полезная информация и никакого спама, честное бойскаутское!
+        </p>
+        <form
+          class="mailing-form"
+          action="https://echo.htmlacademy.ru/"
+          method="get"
+        >
+          <input
+            class="mailing-input"
+            type="text"
+            name="mailing"
+            placeholder="Ваш e-mail"
+          />
+          <button class="button" type="submit">Подписаться</button>
+        </form>
+      </section>
     </main>
 
     <footer class="main-footer">
@@ -227,7 +280,7 @@
       </ul>
       <a class="footer-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
       <a href="https://htmlacademy.ru/intensive/htmlcss">
-        <img src="#" alt="Логотип html academy">
+        <img src="#" alt="Логотип html academy" />
       </a>
     </footer>
   </body>
