--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <nav class="navigation">
         <ul class="navigation-list">
         <li class="navigation-item">
-          <a class="navigation-link" href="#">Главная</a>
+          <a class="navigation-link navigation-link-current" href="index.html">Главная</a>
         </li>
         <li class="navigation-item">
           <a class="navigation-link" href="#">О седоне</a>
@@ -21,13 +21,14 @@
       </ul>
       <ul class="navigation-list navigation-user">
         <li class="navigation-item">
-          <a class="navigation-link" href="#">
+          <button class="button-search" href="#">
             <span class="visually-hidden">Поиск</span>
-          </a>
+          </button>
         </li>
         <li class="navigation-item">
           <a class="navigation-link" href="#">
-            <span class="visually-hidden">Корзина(избранное)</span>
+            <span class="visually-hidden">Отелей в избранном</span>
+            <span class="count">12</span>
           </a>
         </li>
         <li class="navigation-item">
@@ -41,7 +42,7 @@
     <main class="main-index">
       <section class="slogan">
         <h1 class="visually-hidden">Добро пожаловать в Седону</h1>
-        <img src="#" alt="Добро пожаловать в великолепие Седоны 'потому что Гранд-каньон отстой'">
+        <img src="#" alt="Welcome to the gorgias Sedona Because the grand canyon sucks!">
       </section>
 
       <section class="advantages">
@@ -95,14 +96,15 @@
       <section class="interest">
         <h2 class="section-title">Заинтересовались?</h2>
         <p>Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-        <a class="interest-link" href="#">ПОИСК ГОСТИНИЦЫ В седоне</a>
+        <button class="button" type="button">ПОИСК ГОСТИНИЦЫ В седоне</button>
       </section>
 
       <section class="mailing">
         <h2 class="section-title">Подпишитесь на рассылку</h2>
         <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
         <form class="mailing-form" action="https://echo.htmlacademy.ru/" method="get">
-          <input class="mailing-input" type="text" name="mailing" placeholder="Ваш e-mail">
+          <label class="visually-hidden" for="subscription_email">Ваш e-mail</label>
+          <input class="mailing-input" placeholder="Ваш e-mail" type="text" name="mailing" id="subscription-email" required>
           <button class="button" type="submit">Подписаться</button>
         </form>
       </section>
@@ -111,25 +113,25 @@
     </main>
 
     <footer class="main-footer">
-      <ul class="footer-social-list">
-        <li class="footer-social-item">
-          <a class="button" href="#">
+      <ul class="social-list">
+        <li class="social-item">
+          <a class="button-social" href="#">
             <span class="visually-hidden">Vk</span>
           </a>
         </li>
-        <li class="footer-social-item">
-          <a class="button" href="#">
+        <li class="social-item">
+          <a class="button-social" href="#">
             <span class="visually-hidden">Telegram</span>
           </a>
         </li>
-        <li class="footer-social-item">
-          <a class="button" href="#">
+        <li class="social-item">
+          <a class="button-social" href="#">
             <span class="visually-hidden">YouTube</span>
           </a>
         </li>
       </ul>
       <a class="footer-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
-      <a href="https://htmlacademy.ru/intensive/htmlcss">
+      <a class="logo-academy" href="https://htmlacademy.ru/intensive/htmlcss">
         <img src="#" alt="Логотип html academy">
       </a>
     </footer>
