Подправил alt на изображениях

--- a/catalog.html
+++ b/catalog.html
@@ -94,22 +94,38 @@
             <legend class="catalog-filter-title">Тип жилья:</legend>
             <ul class="catalog-filter-list">
               <li class="catalog-filter-item">
-<label class="control">
-              <input class="control-item" type="radio" name="hotel-group" value="hotel" checked />
-              Гостиница
-            </label>
+                <label class="control">
+                  <input
+                    class="control-item"
+                    type="radio"
+                    name="hotel-group"
+                    value="hotel"
+                    checked
+                  />
+                  Гостиница
+                </label>
               </li>
               <li class="catalog-filter-item">
-<label class="control">
-              <input class="control-item" type="radio" name="hotel-group" value="motel" />
-              Мотель
-            </label>
+                <label class="control">
+                  <input
+                    class="control-item"
+                    type="radio"
+                    name="hotel-group"
+                    value="motel"
+                  />
+                  Мотель
+                </label>
               </li>
               <li class="catalog-filter-item">
-<label class="control">
-              <input class="control-item" type="radio" name="hotel-group" value="apartment" />
-              Апартаменты
-            </label>
+                <label class="control">
+                  <input
+                    class="control-item"
+                    type="radio"
+                    name="hotel-group"
+                    value="apartment"
+                  />
+                  Апартаменты
+                </label>
               </li>
             </ul>
           </fieldset>
@@ -130,20 +146,24 @@
         </select>
         <div class="sort-list">
           <a class="sort sort-curent" href="catalog.html?view=tile">
-          <span class="visually-hidden">показать карточки</span>
-        </a>
-        <a class="sort " href="catalog.html?view=card">
-          <span class="visually-hidden">показать слайды</span>
-        </a>
-        <a class="sort" href="catalog.html?view=list">
-          <span class="visually-hidden">показать список</span>
-        </a>
+            <span class="visually-hidden">показать карточки</span>
+          </a>
+          <a class="sort" href="catalog.html?view=card">
+            <span class="visually-hidden">показать слайды</span>
+          </a>
+          <a class="sort" href="catalog.html?view=list">
+            <span class="visually-hidden">показать список</span>
+          </a>
         </div>
 
         <div class="product-card">
           <a class="product-card-link" href="#">
-            <img class="product-card-img" src="#" alt="Изображение показывает вид из темной пещеры на ночное небо, усеянное звездами. Скалы пещеры имеют красновато-коричневый оттенок, а небо за их пределами - глубокий синий цвет с множеством ярких точек, представляющих звезды. Свет попадает в пещеру, освещая пол и часть скал.
-            " />
+            <img
+              class="product-card-img"
+              src="#"
+              alt="Изображение показывает вид из темной пещеры на ночное небо, усеянное звездами.
+            "
+            />
             <h3 class="product-card-title">Amara Resort & Spa</h3>
           </a>
           <p>
@@ -162,7 +182,11 @@
         </div>
         <div class="product-card">
           <a class="product-card-link" href="#">
-            <img class="product-card-img" src="#" alt="Изображение демонстрирует впечатляющий природный пейзаж в Седоне, Сюрприз. Главный объект фото - скалистые горы оранжево-красного цвета. Скалы имеют сложную, неровную форму и шероховатую текстуру поверхности. Перед горой находится полоска зелёных кустарников и деревьев. В небе доминируют тёмные облака, но среди них просвечивает мягкий рассеянный свет. На изображении нет людей или искусственных объектов, всё внимание сосредоточено на природе. Пейзаж передаёт ощущения спокойствия и мощи природы, внушая уважение к окружающему миру. Красочные горы, угрюмое небо и нежная радуга создают сложную композицию, где каждая деталь играет свою роль в гармонии." />
+            <img
+              class="product-card-img"
+              src="#"
+              alt="Главный объект фото - скалистые горы оранжево-красного цвета."
+            />
             <h3 class="product-card-title">Villas at Poco Diablo</h3>
           </a>
           <p>
@@ -181,7 +205,11 @@
         </div>
         <div class="product-card">
           <a class="product-card-link" href="#">
-            <img class="product-card-img" src="#" alt=" Фотография изображает впечатляющий пейзаж юго-запада США, предположительно в районе Седоны, штат Аризона. Главный объект - массивная скалистая гора из красного песчаника. Гора имеет монолитную структуру с горизонтальными и вертикальными слоями. Цветовая гамма скалы варьируется от красного до тёмно-оранжевого с мягкими тенями. Верхняя часть скалы освещена тёплым жёлто-оранжевым светом вечернего солнца. Небо окрашено ярко-оранжевыми и розовыми тонами облаков. На переднем плане густая растительность насыщенного зелёного цвета. В левом нижнем углу видна беседка или постройка для отдыха, выполненная в светлых тонах. Фотография снята на закате, когда дневной свет создает насыщенные контрасты между тенью и жаром вечерних лучей." />
+            <img
+              class="product-card-img"
+              src="#"
+              alt="Главный объект - массивная скалистая гора из красного песчаника."
+            />
             <h3 class="product-card-title">Desert Quail Inn</h3>
           </a>
           <p>
@@ -200,7 +228,11 @@
         </div>
         <div class="product-card">
           <a class="product-card-link" href="#">
-            <img class="product-card-img" src="#" alt="• Изображение представляет ночной пейзаж с крупной скалистой горой в центре. Гора имеет выраженную текстуру и горизонтальные слои камня. Цвета горы варьируются от терракотового и красноватого до оранжевых и коричневых тонов. Гора хорошо освещена снизу, создавая золотистое свечение и выделяя текстуры камня. Линия горизонта нечётко различима из-за тени и темноты. Верхнее изображение занято ночным небом, полным звёзд. Звёзды разбросаны повсюду, создавая ощущение бескрайности космоса. Небо кажется чистым и спокойным, без облаков и посторонних объектов. Пейзаж статичен, без признаков движения или человеческой деятельности. Текстура скал шероховатая и массивная, подчёркивая их возраст и устойчивость. Отсутствие зданий и искусственных конструкций добавляет аутентичности сцене. Настроение изображения - умиротворение, восхищение перед красотой природы. Мягкое освещение скалы на фоне звёздного неба создаёт атмосферу загадочности и медитативности." />
+            <img
+              class="product-card-img"
+              src="#"
+              alt="• Изображение представляет ночной пейзаж с крупной скалистой горой в центре."
+            />
             <h3 class="product-card-title">GreenTree Inn</h3>
           </a>
           <p>
