--- a/index.html
+++ b/index.html
@@ -67,8 +67,7 @@
         </div>
         <div class="advantages-bridge">
           <img src="#" alt="туристическая достопримечательность на заднем плане
-          Каньон: Седона, тропа моста Дьявола
-          На изображении показан природный пейзаж с характерными красными скалами и арками, типичными для региона Седона в Аризоне, США. На переднем плане видна массивная каменная арка, под которой растут зелёные деревья.">
+          Каньон: Седона, тропа моста Дьявола">
           <h3 class="advantages-title">Там есть мост дьявола</h3>
           <p class="advantages-discription">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
         </div>
