--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <main class="main-index">
       <section class="slogan">
         <h1 class="visually-hidden">Добро пожаловать в Седону</h1>
-        <img src="images/index-bacground.jpg" width="458" height="352" alt="Welcome to the gorgias Sedona Because the grand canyon sucks!" >
+        <img src="images/icons/welcome.svg" width="458" height="352" alt="Welcome to the gorgias Sedona Because the grand canyon sucks!" >
       </section>
 
       <section class="advantages">
