--- a/index.html
+++ b/index.html
@@ -3,43 +3,50 @@
   <head>
     <meta charset="utf-8">
     <title>Седона</title>
+    <link rel="stylesheet" href="styles/styles.css">
   </head>
   <body>
+
     <header class="main-header">
       <a href="index.html">
-        <img class="main-logo" src="images/icons/logo-sedona.svg" width="140" height="70" alt="Логотип Седона" >
+        <img
+          class="main-logo"
+          src="images/icons/logo-sedona.svg"
+          width="140"
+          height="70"
+          alt="Логотип Седона"
+        />
       </a>
-
       <nav class="navigation">
         <ul class="navigation-list">
-        <li class="navigation-item">
-          <a class="navigation-link navigation-link-current" href="index.html">Главная</a>
-        </li>
-        <li class="navigation-item">
-          <a class="navigation-link" href="#">О седоне</a>
-        </li>
-        <li class="navigation-item">
-          <a class="navigation-link" href="catalog.html">Гостиницы</a>
-        </li>
-      </ul>
-      <ul class="navigation-list navigation-user">
-        <li class="navigation-item">
-          <button class="button-search" href="#">
-            <span class="visually-hidden">Поиск</span>
-          </button>
-        </li>
-        <li class="navigation-item">
-          <a class="navigation-link" href="#">
-            <span class="visually-hidden">Отелей в избранном</span>
-            <span class="count">12</span>
-          </a>
-        </li>
-        <li class="navigation-item">
-          <a class="navigation-link" href="#">Хочу сюда!</a>
-        </li>
-      </ul>
+          <li class="navigation-item">
+            <a class="navigation-link" href="index.html">Главная</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">О седоне</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link navigation-link-current" href="catalog.html"
+              >Гостиницы</a
+            >
+          </li>
+        </ul>
+        <ul class="navigation-list navigation-user">
+          <li class="navigation-item">
+            <a class="navigation-link navigation-link-search" href="#">
+              <span class="visually-hidden">Поиск</span>
+            </a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link navigation-link-selected" href="#">
+              <span class="visually-hidden">Корзина(избранное)</span>
+            </a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link button" href="#">Хочу сюда!</a>
+          </li>
+        </ul>
       </nav>
-
     </header>
 
     <main class="main-index">
@@ -50,67 +57,67 @@
 
       <section class="advantages">
         <h2 class="section-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
-        <p>Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
-        <div class="advantages-town">
+        <p class="text-basic">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
+        <div class="advantages-block advantages-town">
           <h3 class="advantages-title">Настоящий городок</h3>
-          <p class="advantages-discription">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
-          <img src="images/photo-1.jpg" width="800" alt="На изображении показано здание с деревянным балконом и вывеской «OPEN RANGE GRILL & TAVERN». На балконе развеваются американские флаги. На переднем плане — зелёные и ярко-розовые цветы, а также растения, частично размытые.">
+          <p class="advantages-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
         </div>
-        <div class="advantages-square">
+        <img class="advantages-image" src="images/photo-1.jpg" width="800" alt="На изображении показано здание с деревянным балконом и вывеской «OPEN RANGE GRILL & TAVERN». На балконе развеваются американские флаги. На переднем плане — зелёные и ярко-розовые цветы, а также растения, частично размытые.">
+        <div class="advantages-block advantages-square">
           <h3 class="advantages-title">Небольшая площадь</h3>
-          <p class="advantages-discription">Все достопримечательности находятся очень близко</p>
+          <p class="advantages-description">Все достопримечательности находятся очень близко</p>
         </div>
-        <div class="advantages-road">
+        <div class="advantages-block advantages-road">
           <h3 class="advantages-title">Красивая дорога</h3>
-          <p class="advantages-discription">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+          <p class="advantages-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
         </div>
-        <div class="advantages-turist">
+        <div class="advantages-block advantages-turist">
           <h3 class="advantages-title">Мало туристов</h3>
-          <p class="advantages-discription">Большинство едет в Гранд Каньон и толпится там</p>
+          <p class="advantages-description">Большинство едет в Гранд Каньон и толпится там</p>
         </div>
-        <div class="advantages-bridge">
-          <img src="images/photo-2.jpg" width="800" alt="туристическая достопримечательность на заднем плане
+        <img class="advantages-image" src="images/photo-2.jpg" width="800" alt="туристическая достопримечательность на заднем плане
           Каньон: Седона, тропа моста Дьявола">
+        <div class="advantages-block advantages-bridge">
           <h3 class="advantages-title">Там есть мост дьявола</h3>
-          <p class="advantages-discription">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+          <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
         </div>
       </section>
 
       <section class="rest">
         <h2 class="section-title">Приезжайте в Седону отдохнуть в комфорте и уюте!</h2>
-        <p>Опытный персонал и качественное обслуживание!</p>
-        <div class="rest-housing">
-          <img src="images/icons/variant-housing.svg" width="75" height="72" alt="">
+        <p class="text-basic">Опытный персонал и качественное обслуживание!</p>
+        <div class="rest-block rest-housing">
+          <img class="rest-image" src="images/icons/variant-housing.svg" width="75" height="72" alt="">
           <h3 class="rest-title">Жильё</h3>
-          <p class="rest-discription">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+          <p class="rest-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
         </div>
-        <div class="rest-food">
-          <img src="images/icons/variant-eating.svg" width="75" height="72" alt="">
+        <div class="rest-block rest-food">
+          <img class="rest-image" src="images/icons/variant-eating.svg" width="75" height="72" alt="">
           <h3 class="rest-title">Еда</h3>
-          <p class="rest-discription">Всегда заказывайте
+          <p class="rest-description">Всегда заказывайте
           топовый фирменный бургер, вы не разочаруетесь!</p>
         </div>
-        <div class="rest-souvenir">
-          <img src="images/icons/variant-souvenir.svg" width="75" height="72" alt="">
+        <div class="rest-block rest-souvenir">
+          <img class="rest-image" src="images/icons/variant-souvenir.svg" width="75" height="72" alt="">
           <h3 class="rest-title">Сувениры</h3>
-          <p class="rest-discription">Не только китайского,
+          <p class="rest-description">Не только китайского,
           но и настоящего местного производства!</p>
         </div>
       </section>
 
       <section class="interest">
         <h2 class="section-title">Заинтересовались?</h2>
-        <p>Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+        <p class="text-basic">Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения гостиниц в Седоне</p>
         <button class="button" type="button">ПОИСК ГОСТИНИЦЫ В седоне</button>
       </section>
 
       <section class="mailing">
-        <h2 class="section-title">Подпишитесь на рассылку</h2>
-        <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
+        <h2 class="section-title mailing-title">Подпишитесь на рассылку</h2>
+        <p class="text-basic">Только полезная информация и никакого спама, честное бойскаутское!</p>
         <form class="mailing-form" action="https://echo.htmlacademy.ru/" method="get">
           <label class="visually-hidden" for="subscription_email">Ваш e-mail</label>
           <input class="mailing-input" placeholder="Ваш e-mail" type="text" name="mailing" id="subscription-email" required>
-          <button class="button" type="submit">Подписаться</button>
+          <button class="button additional-button" type="submit">Подписаться</button>
         </form>
       </section>
     </main>
@@ -118,24 +125,24 @@
     <footer class="main-footer">
       <ul class="social-list">
         <li class="social-item">
-          <a class="button-social vk" href="https://vk.com/htmlacademy">
+          <a class="button-social-vk" href="https://vk.com/htmlacademy">
             <span class="visually-hidden">Vk</span>
           </a>
         </li>
         <li class="social-item">
-          <a class="button-social telegram" href="https://t.me/htmlacademy ">
+          <a class="button-social-telegram" href="https://t.me/htmlacademy ">
             <span class="visually-hidden">Telegram</span>
           </a>
         </li>
         <li class="social-item">
-          <a class="button-social youtube" href="https://www.youtube.com/user/htmlacademyru">
+          <a class="button-social-youtube" href="https://www.youtube.com/user/htmlacademyru">
             <span class="visually-hidden">YouTube</span>
           </a>
         </li>
       </ul>
       <a class="footer-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
       <a class="logo-academy" href="https://htmlacademy.ru/intensive/htmlcss">
-        <img src="images/icons/brand-htmlacademy.svg" width="115" height="33" alt="Логотип html academy">
+        <p class="visually-hidden">html academy</p>
       </a>
     </footer>
   </body>
