Микросетки на флексах для всех страниц

--- a/catalog.html
+++ b/catalog.html
@@ -152,14 +152,16 @@
                 <span>От 4000 ₽</span>
               </p>
               <div class="buttons-block">
-<a class="show-more button" href="#">подробнее</a>
-              <button class="button button-blue" type="button">в избранное</button>
+                <a class="show-more button" href="#">подробнее</a>
+                <button class="button button-blue" type="button">в избранное</button>
               </div>
               <div class="rating">
-                <span class="rating-star"></span>
-                <span class="rating-star"></span>
-                <span class="rating-star"></span>
-                <span class="rating-star"></span>
+                <div class="rating-block-star">
+                  <span class="rating-star"></span>
+                  <span class="rating-star"></span>
+                  <span class="rating-star"></span>
+                  <span class="rating-star"></span>
+                </div>
                 <p class="rating-result">Рейтинг: 8,5</p>
               </div>
             </div>
@@ -176,13 +178,15 @@
               </p>
               <div class="buttons-block">
                 <a class="show-more button" href="#">подробнее</a>
-                              <button class="button button-blue" type="button">в избранное</button>
-                              </div>
+                <button class="button button-blue" type="button">в избранное</button>
+              </div>
               <div class="rating">
-                <span class="rating-star"></span>
-                <span class="rating-star"></span>
-                <span class="rating-star"></span>
-                <span class="rating-star"></span>
+                <div class="rating-block-star">
+                  <span class="rating-star"></span>
+                  <span class="rating-star"></span>
+                  <span class="rating-star"></span>
+                  <span class="rating-star"></span>
+                </div>
                 <p class="rating-result">Рейтинг: 9,2</p>
               </div>
             </div>
@@ -199,13 +203,14 @@
               </p>
               <div class="buttons-block">
                 <a class="show-more button" href="#">подробнее</a>
-                              <button class="button button-blue" type="button">в избранное</button>
-                              </div>
+                <button class="button button-blue" type="button">в избранное</button>
+              </div>
               <div class="rating">
-                <span class="rating-star"></span>
-                <span class="rating-star"></span>
-                <span class="rating-star"></span>
-                <span class="rating-star"></span>
+                <div class="rating-block-star">
+                  <span class="rating-star"></span>
+                  <span class="rating-star"></span>
+                  <span class="rating-star"></span>
+                </div>
                 <p class="rating-result">Рейтинг: 6,9</p>
               </div>
             </div>
@@ -222,13 +227,13 @@
               </p>
               <div class="buttons-block">
                 <a class="show-more button" href="#">подробнее</a>
-                              <button class="button button-blue" type="button">в избранное</button>
-                              </div>
+                <button class="button button-blue" type="button">в избранное</button>
+              </div>
               <div class="rating">
-                <span class="rating-star"></span>
-                <span class="rating-star"></span>
-                <span class="rating-star"></span>
-                <span class="rating-star"></span>
+                <div class="rating-block-star">
+                  <span class="rating-star"></span>
+                  <span class="rating-star"></span>
+                </div>
                 <p class="rating-result">Рейтинг: 5,0</p>
               </div>
             </div>
@@ -294,7 +299,7 @@
         </ul>
         <a class="footer-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
         <a class="logo-academy" href="https://htmlacademy.ru/intensive/htmlcss">
-          <p class="visually-hidden">html academy</p>
+          <span class="visually-hidden">html academy</span>
         </a>
       </footer>
     </div>
