--- a/index.html
+++ b/index.html
@@ -54,8 +54,10 @@
 
         <!-- Секция Преимущества -->
         <section class="advantages">
-          <h2 class="section-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
-          <p class="text-basic">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
+          <div class="advantages-intro">
+            <h2 class="section-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
+            <p class="text-basic">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
+          </div>
 
           <div class="advantages-block">
             <div class="advantages-town">
@@ -97,8 +99,11 @@
 
         <!-- Секция отдых -->
         <section class="relax">
-          <h2 class="section-title">Приезжайте в Седону отдохнуть в комфорте и уюте!</h2>
+          <div class="relax-intro">
+<h2 class="section-title">Приезжайте в Седону отдохнуть в комфорте и уюте!</h2>
           <p class="text-basic">Опытный персонал и качественное обслуживание!</p>
+          </div>
+
           <div class="relax-block">
             <div class="relax-housing">
               <img class="relax-image" src="images/icons/variant-housing.svg" width="75" height="72" alt="">
@@ -163,7 +168,7 @@
         </ul>
         <a class="footer-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
         <a class="logo-academy" href="https://htmlacademy.ru/intensive/htmlcss">
-          <p class="visually-hidden">html academy</p>
+          <span class="visually-hidden">html academy</span>
         </a>
       </footer>
     </div>
