--- a/index.html
+++ b/index.html
@@ -192,10 +192,10 @@
             <div class="adults-children">
               <label class="modal-form-label" for="adults">Взрослые:</label>
               <div class="modal-block-number-input">
-                <button class="button-minus" type="button"></button>
+                <button class="button-minus" type="button" aria-label="кнопка минус"></button>
                 <input class="modal-input-number" type="number" id="adults" name="Взрослые:" value="0" min="0"
                   max="100">
-                <button class="button-plus" type="button"></button>
+                <button class="button-plus" type="button" area-label="кнопка плюс"></button>
               </div>
 
               <div>
@@ -213,9 +213,9 @@
               </div>
 
               <div class="modal-block-number-input">
-                <button class="button-minus" type="button"></button>
+                <button class="button-minus" type="button" aria-label="кнопка минус"></button>
                 <input class="modal-input-number" type="number" id="children" name="Дети:" value="0" min="0" max="100">
-                <button class="button-plus" type="button"></button>
+                <button class="button-plus" type="button" area-label="кнопка плюс"></button>
               </div>
             </div>
 
